// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
>
  Hello world
</p>
`;

exports[`composition hook should return with Label props 1`] = `
Object {
  "className": "css-gtcjbw css-1pwrqjj css-1yuzjtp fp-Box fp-Label",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  color: #574feb !important;
}

<label
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Label"
>
  hello world
</label>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
>
  Hello world
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  color: #574feb !important;
}

<label
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
>
  Hello world
</label>
`;

exports[`props should render correctly with a htmlFor attribute 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
  for="test"
>
  Hello world
</label>
`;

exports[`theming Label.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-0 {
  background-color: #ff0000;
}

<label
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Label"
>
  hello world
</label>
`;
